--- a/src/styles/estilos.css
+++ b/src/styles/estilos.css
@@ -1,3 +1,24 @@
+.container-fluid{
+    margin: 0 0;
+    padding: 0%;
+    background-image: url('../components/img/fondo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;    
+    width: 100%;
+    height:100vh;
+}
+.navbarFormat{
+    background-color: none;
+}
+ .nav-link{
+    text-decoration:none;
+    color:white;
+ }
+ .nav-link:hover{
+     color:ivory;
+     background-color: black;
+ }
 .w-30{
     width:30%;
 }
@@ -13,3 +34,4 @@
 .w-80{
     width:80%;
 }
+
