--- a/src/styles/estilos.css
+++ b/src/styles/estilos.css
@@ -33,6 +33,17 @@
     background-color: rgba(46, 64, 83, 0.664);    
     width: 15rem;
 }
+.enlace{
+    color:white;
+}
+.card{
+    margin-left: auto;
+    margin-right: auto;
+}
+.tarjeta-objetivo{
+    background-color: rgba(46, 64, 83, 0.664);    
+    width: 60rem;
+}
 .tarjeta-hijo{
     color: white;
     opacity: 1;
@@ -57,6 +68,7 @@ aside{
     background-color: rgb(46, 64, 83 );
     color:white;
     position: fixed;
+    padding: 1.1rem;
     bottom: 0;
     width:100%;
 }
@@ -75,4 +87,19 @@ aside{
 .w-80{
     width:80%;
 }
+@media (max-width: 980px){
+    .card{
+        width:40rem;
+    }
+}
 
+@media (max-width: 700px){
+    .card{
+        width:30rem;
+    }
+}
+@media (max-width: 500px){
+    .card{
+        width:20rem;
+    }
+}
